# clox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/modules/: clox.cmake  clox_add_executable.cmake  clox_add_library.cmake  clox_add_unit_test.cmake  clox_link_libraries.cmake  clox_log.cmake
examples/: fib.lox
include/clox/: config.h.in
include/clox/base/: alloc.h  api.h  bits.h  bool.h  byte.h  defs.h  dload.h  errno.h  file.h  path.h  string.h  utf8.h  utils.h
include/clox/source/: source_buffer.h  source_location.h  source_stream.h
include/clox/vm/: buffer.h  chunk.h  code.h  code.inc  code_block.h  debug.h  opcode.h  opcode.inc  opcodes.h  opcodes.inc  value.h
lib/: CMakeLists.txt
lib/base/: CMakeLists.txt  dload.c  errno.c  path.c  string.c  utf8.c  utf8.inc
lib/source/: CMakeLists.txt  source_buffer.c  source_stream.c
lib/vm/: CMakeLists.txt  buffer.c  chunk.c  code.c  code_block.c  debug.c  opcode.c  opcodes.c  value.c
src/: CMakeLists.txt
src/clox/: CMakeLists.txt
units/: CMakeLists.txt
units/base/: CMakeLists.txt  test_bits.c  test_errno.c
units/vm/: CMakeLists.txt  test_buffer.c  test_chunk.c  test_code.c  test_code_block.c  test_opcode.c
